--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
+!**/src/main/java/net/slimou/lmstudio/Config.java
 !**/src/test/**/target/
 
 ### STS ###
