--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=LMStudio
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+
+
+spring.task.scheduling.pool.size=5
+spring.task.scheduling.thread-name-prefix=scheduler-
+scheduler.cron=0/20 * * * * *
+
+scheduler.enabled=true
+scheduler.fixedRate=2000
